--- a/scripts/scan/sps_configs.yml
+++ b/scripts/scan/sps_configs.yml
@@ -608,9 +608,14 @@ slurm:
         # - 'lb-approx0-weak-scaling-cpu-gpu'
         
         # Approximate 
-        # - 'exact-timing-gpu' 
+        - 'exact-timing-strong-gpu' 
         - 'f32-srp-timing-strong-gpu' 
         - 'f32-rds-timing-strong-gpu' 
+
+        # - 'exact-timing-strong-gpu-2pn' 
+        # - 'f32-srp-timing-strong-gpu-2pn' 
+        # - 'f32-rds-timing-strong-gpu-2pn' 
+
         # - 'srp-timing-gpu' 
         # - 'rds-timing-gpu' 
         # - 'float32-timing-gpu' 
@@ -626,10 +631,10 @@ slurm:
     configs: {
 
         # Approximate 
-        'exact-timing-gpu': {
+        'exact-timing-strong-gpu': {
             'exe': ['SPS_main.py'],
             'particles': [2000000],
-            'bunches': [36, 72, 144, 288],  # 192
+            'bunches': [288],  # 192
             'slices': [1408],
             'turns': [10000],
             'monitor': [0],
@@ -649,8 +654,7 @@ slurm:
             'mpi': ['openmpi4'],
             'cores_per_cpu': [20],
             'partition': ['gpu'],
-            
-            'time': [30],
+            'time': [120],
             'repeats': 2
         },
 
@@ -658,8 +662,7 @@ slurm:
         
         'f32-srp-timing-strong-gpu': {
             'exe': ['SPS_main.py'],
-            'particles': [1000000],
-            # 'bunches': [36, 72, 144, 288],  # 192
+            'particles': [2000000],
             'bunches': [288],  # 192
             'slices': [1408],
             'turns': [10000],
@@ -675,7 +678,7 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [1],
-            'workers': [2, 4, 8],
+            'workers': [2, 4, 8, 16],
             'omp': [20],
             'mpi': ['openmpi4'],
             'cores_per_cpu': [20],
@@ -686,7 +689,7 @@ slurm:
 
         'f32-rds-timing-strong-gpu': {
             'exe': ['SPS_main.py'],
-            'particles': [1000000],
+            'particles': [2000000],
             'bunches': [288],  # 192
             'slices': [1408],
             'turns': [10000],
@@ -702,8 +705,92 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [1],
-            'workers': [2, 4, 8],
+            'workers': [2, 4, 8, 16],
             'omp': [20],
+            'mpi': ['openmpi4'],
+            'cores_per_cpu': [20],
+            'partition': ['gpu'],
+            'time': [120],
+            'repeats': 2
+        },
+
+
+        'exact-timing-strong-gpu-2pn': {
+            'exe': ['SPS_main.py'],
+            'particles': [4000000],
+            'bunches': [288],  # 192
+            'slices': [1408],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [0],
+            'precision': ['double'],
+            'withtp': [0],
+            'reduce': [1],
+            'approx': [0],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [2],
+            'workers': [4, 8, 16, 32],
+            'omp': [10],
+            'mpi': ['openmpi4'],
+            'cores_per_cpu': [20],
+            'partition': ['gpu'],
+            'time': [30],
+            'repeats': 2
+        },
+
+
+        
+        'f32-srp-timing-strong-gpu-2pn': {
+            'exe': ['SPS_main.py'],
+            'particles': [4000000],
+            'bunches': [288],  # 192
+            'slices': [1408],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [0],
+            'precision': ['single'],
+            'withtp': [0],
+            'reduce': [3],
+            'approx': [1],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [2],
+            'workers': [4, 8, 16, 32],
+            'omp': [10],
+            'mpi': ['openmpi4'],
+            'cores_per_cpu': [20],
+            'partition': ['gpu'],
+            'time': [120],
+            'repeats': 2
+        },
+
+        'f32-rds-timing-strong-gpu-2pn': {
+            'exe': ['SPS_main.py'],
+            'particles': [4000000],
+            'bunches': [288],  # 192
+            'slices': [1408],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [0],
+            'precision': ['single'],
+            'withtp': [0],
+            'reduce': [1],
+            'approx': [2],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [2],
+            'workers': [4, 8, 16, 32],
+            'omp': [10],
             'mpi': ['openmpi4'],
             'cores_per_cpu': [20],
             'partition': ['gpu'],
