--- a/.travis.yml
+++ b/.travis.yml
@@ -51,10 +51,10 @@ install:
         wget http://www.fftw.org/fftw-3.3.8.tar.gz > /dev/null;
         tar -xzvf fftw-3.3.8.tar.gz > /dev/null;
         cd fftw-3.3.8;
-        ./configure --prefix=$HOME/install/ --enable-openmp --enable-threads --enable-single --enable-avx --enable-avx2 --enable-fma --with-our-malloc --disable-fortran --enable-shared > /dev/null;
+        ./configure --prefix=$HOME/install/ --enable-openmp --enable-single --enable-avx --enable-avx2 --enable-fma --with-our-malloc --disable-fortran --enable-shared > /dev/null;
         make -j4 > /dev/null;
         make install > /dev/null;
-        ./configure --prefix=$HOME/install/ --enable-openmp --enable-threads --enable-avx --enable-avx2 --enable-fma --with-our-malloc --disable-fortran --enable-shared > /dev/null;
+        ./configure --prefix=$HOME/install/ --enable-openmp --enable-avx --enable-avx2 --enable-fma --with-our-malloc --disable-fortran --enable-shared > /dev/null;
         make -j4 > /dev/null;
         make install > /dev/null;
     fi
@@ -95,6 +95,6 @@ after_success:
   - git remote add origin https://blond-admin:${GITHUB_TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git && git remote -v && cp -r ../_build/html/* . && git add -A && git status && git commit -m "Updated documentation" -n && git push origin gh-pages
   - cd $TRAVIS_BUILD_DIR
   - coveralls
-branches:
-  except:
-  - gpu-dev
+# branches:
+#   only:
+#   - master
