--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,354 @@
-.gitignore
-/.kdev4/
-*.kdev4
-*.pyc
+# Placeholder for user defined entries. If you would like to extend this file, please put your entries in this section.
 
-*.o
-*.so
-*.dll
-*.project
-*.cubin
-*.pydevproject
-
-.settings
-.pytest_cache
-*__pycache__
+results
+logs
 /__doc/_build/
 /__doc/build/
 /__EXAMPLES/*output_files/
-
 /__BENCHMARKS/debug.log
 /__BENCHMARKS/OTFB.png
 /__BENCHMARKS/2x40_2x80.hd5
 /__BENCHMARKS/fig/
 /__BENCHMARKS/animations/
+blond/_version.py
 
+*.kdev4
+*.cubin
+.pytest_cache
+.ipynb_checkpoints
+*__pycache__
 *.DS_Store
-.idea
+*egg-info
+venvs
+
+# End of placeholder for user defined entries
+
+# Custom entries added by Java DevTools (accsoft-devtools-support@cern.ch)
+
+*.pyc
+*core.[0-9]*
+
+### Please note that the following files cannot be pushed to the remote repository even after removing them from this .gitignore (they are prohibited in the remote repository)
+.classpath
+.project
+
+### Please note that the following extensions cannot be pushed to the remote repository even after removing them from this .gitignore (they are prohibited in the remote repository)
+*.a
+*.bak
+*.bin
+*.bkp
+*.bz2
+*.class
+*.dat
+*.db
+*.dll
+*.ear
+*.eot
+*.exe
+*.gz
+*.jar
+*.lib
+*.log
+*.log.[0-9]*
+*.o
+*.otf
+*.out
+*.output
+*.pdf
+*.pk
+*.pmd
+*.ps
+*.root
+*.sdds
+*.so
+*.so.*
+*.tar
+*.tgz
+*.ttf
+*.war
+*.woff
+*.woff2
+*.zip
+
+
+### disallowed folders except inside src as package names
+build/
+!**/src/**/build/
+dist/
+!**/src/**/dist/
+bin/
+!**/src/**/bin/
+lib/
+!**/src/**/lib/
+libs/
+!**/src/**/libs/
+log/
+!**/src/**/log/
+logs/
+!**/src/**/logs/
+cache/
+!**/src/**/cache/
+generated/
+!**/src/**/generated/
+
+
+# End of custom entries added by Java DevTools (accsoft-devtools-support@cern.ch)
+
+# Created by https://www.gitignore.io/api/c,r,git,svn,c++,java,pydev,maven,gradle,kotlin,vagrant,pycharm,eclipse,intellij,java-web,pycharm+all,pycharm+iml,intellij+iml,intellij+all
+### Duplications and empty sections were removed ###
+
+### C ###
+# Prerequisites
+*.d
+
+# Object files
+*.ko
+*.obj
+*.elf
+
+# Linker output
+*.ilk
+*.map
+*.exp
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Libraries
+*.la
+*.lo
+
+# Shared objects (inc. Windows DLLs)
+*.dylib
+
+# Executables
+*.app
+*.i*86
+*.x86_64
+*.hex
+
+# Debug files
+*.dSYM/
+*.su
+*.idb
+*.pdb
+
+# Kernel Module Compile Results
+*.cmd
+.tmp_versions/
+modules.order
+Module.symvers
+Mkfile.old
+dkms.conf
+
+### C++ ###
+# Prerequisites
+
+# Compiled Object files
+*.slo
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+
+### Eclipse ###
+.metadata
+bin/
+tmp/
+*.tmp
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
+
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# PyDev specific (Python IDE for Eclipse)
+*.pydevproject
+
+# CDT-specific (C/C++ Development Tooling)
+.cproject
+
+# Java annotation processor (APT)
+.factorypath
+
+# PDT-specific (PHP Development Tools)
+.buildpath
+
+# sbteclipse plugin
+.target
+
+# Tern plugin
+.tern-project
+
+# TeXlipse plugin
+.texlipse
+
+# STS (Spring Tool Suite)
+.springBeans
+
+# Code Recommenders
+.recommenders/
+
+# Scala IDE specific (Scala & Java development for Eclipse)
+.cache-main
+.scala_dependencies
+.worksheet
+
+### Eclipse Patch ###
+
+# Annotation Processing
+.apt_generated
+
+### Git ###
+*.orig
+
+### Intellij ###
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+
+# CMake
+cmake-build-debug/
+
+## File-based project format:
+*.iws
+
+## Plugin-specific files:
+
+# IntelliJ
+/out/
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Ruby plugin and RubyMine
+/.rakeTasks
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
+
+### Intellij Patch ###
+# Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
+
+# *.iml
+# modules.xml
+# *.ipr
+
+### Intellij+all ###
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+
+### Intellij+all Patch ###
+# Ignores the whole .idea folder and all .iml files
+# See https://github.com/joeblau/gitignore.io/issues/186 and https://github.com/joeblau/gitignore.io/issues/360
+
+.idea/
+
+### Java ###
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+### Maven ###
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+
+# Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
+!/.mvn/wrapper/maven-wrapper.jar
+
+
+### PyCharm+iml Patch ###
+# Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-249601023
+
+### pydev ###
+.pydevproject
+
+### R ###
+# History files
+.Rhistory
+.Rapp.history
+
+# Session Data files
+.RData
+
+# Example code in package build process
+*-Ex.R
+
+# Output files from R CMD check
+/*.Rcheck/
+
+# RStudio files
+.Rproj.user/
+
+# produced vignettes
+vignettes/*.html
+vignettes/*.pdf
+
+# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
+.httr-oauth
+
+# knitr and R markdown default cache directories
+/*_cache/
+/cache/
+
+# Temporary files created by R markdown
+*.utf8.md
+*.knit.md
+
+### SVN ###
+.svn/
+
+### Vagrant ###
+.vagrant/
+*.box
+
+### Gradle ###
+.gradle
+**/build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+
+# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+# gradle/wrapper/gradle-wrapper.properties
+
+
+# End of https://www.gitignore.io/api/c,r,git,svn,c++,java,pydev,maven,gradle,kotlin,vagrant,pycharm,eclipse,intellij,java-web,pycharm+all,pycharm+iml,intellij+iml,intellij+all
+
