--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,9 +1,8 @@
 recursive-include blond/cpp_routines *.so
 recursive-include blond/cpp_routines *.dll
-recursive-include blond/cpp_routines *.la
-recursive-include blond/cpp_routines *.a
 recursive-include blond/cpp_routines *.cpp
 recursive-include blond/cpp_routines *.h
 recursive-include blond/beam *.cpp
 recursive-include blond/synchrotron_radiation *.cpp
 recursive-include blond/toolbox *.cpp
+recursive-include blond/gpu/cuda_kernels *.cu
