--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ variables:
   project_name: BLonD
   # Set the project root to the directory containing your setup.py
   project_root: ./
-  PYPI_UPLOAD_URL: "https://pypi.org/"
+  PYPI_UPLOAD_URL: "https://upload.pypi.org/legacy/"
 
 .on_tag:
   # Rules to run a job only on a git tagged commit
