--- a/setup.cfg
+++ b/setup.cfg
@@ -20,12 +20,12 @@ classifiers =
 
 [options]
 packages = find:
-python_requires = >=3.6
+python_requires = >=3.8
 install_requires = 
     numpy
     scipy
     h5py
-    matplotlib
+    matplotlib>=3.7.1
     mpmath
 include_package_data = True
 
