--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,20 +58,9 @@ variables:
     #   junit: ${project_root}/coverage-report.xml
 
 
-# test_py_37:
-#   variables:  
-#     PY_VERSION: "3.7"
-#   image: python:${PY_VERSION}
-#   stage: test
-#   extends:
-#     - .before
-#     - .main
-#     - .after
-#     # - .publish
-
-test_py_39:
-  variables:
-    PY_VERSION: "3.9"
+test_py_38:
+  variables:  
+    PY_VERSION: "3.8"
   image: python:${PY_VERSION}
   stage: test
   extends:
@@ -80,10 +69,21 @@ test_py_39:
     - .after
     - .publish
 
-
-release_sdist_39:
+test_py_310:
   variables:
-    PY_VERSION: "3.9"
+    PY_VERSION: "3.10"
+  image: python:${PY_VERSION}
+  stage: test
+  extends:
+    - .before
+    - .main
+    - .after
+    # - .publish
+
+
+release_sdist_38:
+  variables:
+    PY_VERSION: "3.8"
   image: python:${PY_VERSION}
   stage: deploy
   extends:
@@ -109,7 +109,7 @@ release_sdist_39:
 
 pages:
   variables:
-    PY_VERSION: "3.9"
+    PY_VERSION: "3.8"
   image: python:${PY_VERSION}
   script:
    - cd ${project_root}
