tests correct required packages versions

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,10 +22,10 @@ classifiers =
 packages = find:
 python_requires = >=3.8
 install_requires = 
-    numpy
+    numpy>=1.20
     scipy
     h5py
-    matplotlib>=3.7.1
+    matplotlib>=3.7
     mpmath
 include_package_data = True
 
